src/test/deca/context/invalid/homemade/tests/test365_selection_nonclass_bool.deca
// test invalide de la règle 3.65


class A{
    int livre;
}

{
    boolean x;
    x.livre = 8;
}